# Webscrape

./: .gitignore  CHANGELOG.md  README.md  SECURITY_FEATURES.md  SECURITY_FIXES_APPLIED.md  SECURITY_VULNERABILITIES.md  WARP.md  githubpage.html  pyproject.toml  requirements.txt  webscrape.py
